<resources>
    <string name="app_name">Club Track</string>
    <string name="start_sesion">Iniciar sesión</string>
    <string name="sesion_user">Usuario</string>
    <string name="sesion_user_password">Contraseña</string>
    <string name="sesion_recover_password">Recuperar Contraseña</string>
    <string name="sesion_registry_user">Registrarse</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Ajustes</string>

    <string name="make_order">Realizar pedido</string>
    <string name="send_order">Enviar pedido</string>
    <string name="empty_cart">Vaciar carrito</string>
    <string name="add_products_cart">Agregar productos</string>

    <string name="name_user">Nombre</string>
    <string name="dni_user">Cédula</string>
    <string name="phone_user">Telefono</string>
    <string name="cell_user">Celular</string>
    <string name="email_user">Correo</string>
    <string name="nickname_user">Usuario</string>
    <string name="password_user">Contraseña</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings_drawer">SettingsDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
