<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_top_edit_text"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/margin_top_edit_text">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Datos personales"
                    android:textSize="@dimen/text_size_title" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_top_edit_text">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/name_user"
                        android:textSize="@dimen/text_size_title" />

                    <EditText
                        android:id="@+id/edt_name_settings_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"
                        android:gravity="center_horizontal"
                        android:hint="@string/name_user"
                        android:textSize="@dimen/text_size_title" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_top_edit_text">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/dni_user"
                        android:textSize="@dimen/text_size_title" />

                    <EditText
                        android:id="@+id/edt_dni_settings_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"
                        android:enabled="false"
                        android:gravity="center_horizontal"
                        android:hint="@string/dni_user"
                        android:textSize="@dimen/text_size_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_top_edit_text">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/phone_user"
                        android:textSize="@dimen/text_size_title" />

                    <EditText
                        android:id="@+id/edt_phone_settings_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"
                        android:gravity="center_horizontal"
                        android:hint="@string/phone_user"
                        android:textSize="@dimen/text_size_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_top_edit_text">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="Telefono 2"
                        android:textSize="@dimen/text_size_title" />

                    <EditText
                        android:id="@+id/edt_phone2_settings_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"
                        android:gravity="center_horizontal"
                        android:hint="@string/phone_user"
                        android:textSize="@dimen/text_size_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_top_edit_text">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/cell_user"
                        android:textSize="@dimen/text_size_title" />

                    <EditText
                        android:id="@+id/edt_cell_settings_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"
                        android:gravity="center_horizontal"
                        android:hint="@string/cell_user"
                        android:textSize="@dimen/text_size_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_top_edit_text">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/email_user"
                        android:textSize="@dimen/text_size_title" />

                    <EditText
                        android:id="@+id/edt_email_settings_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"
                        android:enabled="false"
                        android:gravity="center_horizontal"
                        android:hint="@string/email_user"
                        android:textSize="@dimen/text_size_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_top_edit_text">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/nickname_user"
                        android:textSize="@dimen/text_size_title" />

                    <EditText
                        android:id="@+id/edt_username_settings_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"                  android:enabled="false"
                        android:gravity="center_horizontal"
                        android:hint="@string/nickname_user"
                        android:textSize="@dimen/text_size_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_top_edit_text">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/password_user"
                        android:textSize="@dimen/text_size_title" />

                    <EditText
                        android:id="@+id/edt_pass_settings_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"
                        android:enabled="false"
                        android:gravity="center_horizontal"
                        android:hint="@string/password_user"
                        android:inputType="textPassword"
                        android:textSize="@dimen/text_size_title" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_top_edit_text">

            <Button
                android:id="@+id/btn_update_settings_fragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_marginLeft="@dimen/margin_sides_button"
                android:layout_marginTop="@dimen/margin_top_edit_text"
                android:layout_marginRight="@dimen/margin_sides_button"
                android:layout_marginBottom="@dimen/margin_top_edit_text"
                android:background="@drawable/style_button"
                android:text="Actualizar"
                android:textSize="@dimen/text_size_body_dialog" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>